--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,8 @@ transformers
 torch
 openai
 python-dotenv
-gradio>=4.0
+requests>=2.0.0
+beautifulsoup4>=4.0.0
+openai>=1.0.0
+geopy>=2.0.0
+stremlit
